src/main/default/objects/DR_Regulatory_Fee__c/DR_Regulatory_Fee__c.object-meta.xml
<CustomObject>
    <description>This object is used to capture Line Level Regulatory Fee information</description>
    <label>Digital River Regulatory Fee</label>
    <nameField>
        <displayFormat>DR-Reg-Fee-{000000}</displayFormat>
        <label>DR Regulatory Fee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital River Regulatory Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>