src/main/default/objects/DR_Regulatory_Fee__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>PerUnitAmount multiplied by the quantity of the line item. This does not include Tax</description>
    <inlineHelpText>PerUnitAmount multiplied by the quantity of the line item. This does not include Tax</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>