src/main/default/objects/DR_Regulatory_Fee__c/fields/Cart_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Cart_Item_Id__c</fullName>
    <description>SF Cart Item Id to which Regulatory Fee Record is associated</description>
    <inlineHelpText>SF Cart Item Id to which Regulatory Fee Record is associated</inlineHelpText>
    <label>Cart Item Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>