src/main/default/objects/DR_Regulatory_Fee__c/fields/Fee_Id__c.field-meta.xml
<CustomField>
    <fullName>Fee_Id__c</fullName>
    <description>The Digital River Fee&apos;s unique identifier.</description>
    <inlineHelpText>The Digital River Fee&apos;s unique identifier.</inlineHelpText>
    <label>Fee Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>