src/main/default/objects/DR_Regulatory_Fee__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <description>The type of Fee. Valid values are battery, weee, copyright, e_waste and packaging</description>
    <inlineHelpText>The type of Fee. Valid values are battery, weee, copyright, e_waste and packaging</inlineHelpText>
    <label>Fee Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>