src/main/default/objects/DR_Regulatory_Fee__c/fields/Per_Unit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Per_Unit_Amount__c</fullName>
    <description>The fee amount per unit. This does not include Tax</description>
    <inlineHelpText>The fee amount per unit. This does not include Tax</inlineHelpText>
    <label>Per Unit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>